refactor dtos and Rest controller